package com.example.livegeoguessr.ui.testing

object TestTags {
    const val HOME_SCREEN = "home_screen"
    const val LOGIN_SCREEN = "login_screen"
    const val REGISTER_SCREEN = "register_screen"

    const val LOGIN_EMAIL = "login_email"
    const val REGISTER_EMAIL = "register_email"

    const val LOGIN_PASSWORD = "login_password"
    const val REGISTER_PASSWORD = "register_password"

    const val LOGIN_BUTTON = "login_button"
    const val REGISTER_BUTTON = "register_button"

    const val REGISTER_LINK = "register_link"
    const val LOGIN_LINK = "login_link"

    const val GOOGLE_LOGIN_BUTTON = "google_login_button"
    const val AUTH_ERROR = "auth_error"
}