...
                        deleteConfirmation = ""
                        viewModel.deleteAccount()
                    },
                    enabled = deleteConfirmation == "DELETE"
                ) {
                    Text(
                        text = "Delete",
                        color = Color.Red
                    )
                }
            },
            dismissButton = {
                TextButton(
...
